Implementing DeepAR Model

--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -533,6 +533,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "b88d229c-a6b9-488f-95cd-4c72f1a50ebb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Guardo el dataset procesado\n",
+    "df_dollar_hourly_price.to_csv('dollar_hourly_price.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "427a401d-5703-4f1a-843c-4cdf816908c8",
    "metadata": {},
@@ -1182,65 +1195,6 @@
    "source": [
     "predictions = regressor.predict(test_data.drop('precio', axis=1))\n",
     "predictions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9cad994e-9991-43ac-80d3-381a56d5e142",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Desplegar en SageMaker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30bf8202-d6c0-4f4d-bb55-ff458b8c5e83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sagemaker.sklearn.model import SKLearnModel\n",
-    "\n",
-    "model_name = 'dolar-regressor'\n",
-    "script_path = 'dolar_regresor.py'\n",
-    "\n",
-    "#sklearn_model = SKLearnModel(\n",
-    "    name=model_name,\n",
-    "    model_data='s3://bucket/model.tar.gz',\n",
-    "    role='LabRole',\n",
-    "    entry_point=script_path,\n",
-    "    framework_version='0.23-1'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47790e6f-989b-45db-8783-f94e958e73c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sagemaker.predictor import RealTimePredictor\n",
-    "\n",
-    "#predictor = sklearn_model.deploy(\n",
-    "    initial_instance_count=1,\n",
-    "    instance_type='ml.t2.medium',\n",
-    "    predictor_cls=RealTimePredictor\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46729e7c-a9ef-4ac4-9e02-b2e24d6af457",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#predictions = predictor.predict(X_test)"
    ]
   }
  ],
